[gd_scene load_steps=7 format=3 uid="uid://c1o5q7qomewwx"]

[ext_resource type="Script" path="res://Main.gd" id="1_28ywy"]
[ext_resource type="PackedScene" uid="uid://b7ilegu6nk1si" path="res://mob.tscn" id="2_igolr"]
[ext_resource type="PackedScene" uid="uid://clrrqtponitih" path="res://wall_2.tscn" id="3_7w7gq"]
[ext_resource type="Script" path="res://HUD.gd" id="4_u3t0d"]
[ext_resource type="FontFile" uid="uid://dke6nsjgvla27" path="res://fonts/Xolonium-Regular.ttf" id="5_aecxo"]
[ext_resource type="PackedScene" uid="uid://dhm5lsyjwxvqo" path="res://rigid_player.tscn" id="6_xh3mm"]

[node name="Main" type="Node"]
script = ExtResource("1_28ywy")
mob_scene = ExtResource("2_igolr")
wall_scene = ExtResource("3_7w7gq")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(500, 500)

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_u3t0d")

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -165.0
offset_top = 61.0
offset_right = 171.0
offset_bottom = 139.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_aecxo")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.5
offset_top = -39.0
offset_right = 176.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_aecxo")
theme_override_font_sizes/font_size = 64
text = "Dodge
"
horizontal_alignment = 1

[node name="MessageTimer" type="Timer" parent="HUD"]

[node name="StartButton" type="Button" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="Player" parent="." instance=ExtResource("6_xh3mm")]

[node name="FollowCam" type="Camera2D" parent="Player"]
ignore_rotation = false

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="HUD/MessageTimer" to="HUD" method="_on_message_timer_timeout"]
[connection signal="pressed" from="HUD/StartButton" to="." method="on_start_button_pressed"]
[connection signal="pressed" from="HUD/StartButton" to="HUD" method="_on_start_button_pressed"]
